--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,12 @@
+#
+# Copyright (c) 2017 xjliao.me created by xjliao
+# ProjectName: xjl
+# ModuleName: xjl
+# FileName: gradle.properties
+# ClassName: gradle.properties
+# LastModified: 10/11/17 2:36 PM
+#
+
 # Project-wide Gradle settings.
 
 # IDE (e.g. Android Studio) users:
