--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,3 +1,12 @@
+#
+# Copyright (c) 2017 xjliao.me created by xjliao
+# ProjectName: xjl
+# ModuleName: xjl
+# FileName: gradle-wrapper.properties
+# ClassName: gradle-wrapper.properties
+# LastModified: 10/11/17 11:44 AM
+#
+
 #Wed Oct 11 10:56:00 CST 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
