--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,10 @@
+/*
+ * Copyright (c) 2017 xjliao.me created by xjliao
+ * ProjectName: xjl
+ * ModuleName: xjl
+ * FileName: settings.gradle
+ * ClassName: settings.gradle
+ * LastModified: 10/11/17 10:58 AM
+ */
+
 include ':app', ':xjlib'
