--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -4,7 +4,7 @@
 # ModuleName: xjl
 # FileName: gradle-wrapper.properties
 # ClassName: gradle-wrapper.properties
-# LastModified: 10/11/17 11:44 AM
+# LastModified: 10/11/17 2:36 PM
 #
 
 #Wed Oct 11 10:56:00 CST 2017
