--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,8 @@
   ~ ModuleName: app
   ~ FileName: AndroidManifest.xml
   ~ ClassName: AndroidManifest.xml
-  ~ LastModified: 10/11/17 10:56 AM
--->
+  ~ LastModified: 10/18/17 3:11 PM
+  -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="me.xjliao.xjl">
 
