--- a/xjlib/src/main/AndroidManifest.xml
+++ b/xjlib/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
   ~ ModuleName: xjlib
   ~ FileName: AndroidManifest.xml
   ~ ClassName: AndroidManifest.xml
-  ~ LastModified: 10/11/17 10:58 AM
+  ~ LastModified: 10/11/17 2:36 PM
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
