--- a/xjlib/build.gradle
+++ b/xjlib/build.gradle
@@ -81,7 +81,11 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.1.6'
     compile 'com.squareup:otto:1.3.8'
+    compile 'com.fasterxml.jackson.core:jackson-core:2.8.9'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.8.9'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.9'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.squareup.retrofit2:converter-jackson:2.3.0'
     compile 'com.kyleduo.switchbutton:library:1.4.4'
     compile "com.daimajia.swipelayout:library:1.2.0@aar"
     compile 'com.daimajia.androidanimations:library:1.1.2@aar'
