--- a/xjlib/build.gradle
+++ b/xjlib/build.gradle
@@ -8,13 +8,13 @@
  */
 
 apply plugin: 'com.android.library'
-apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'com.jakewharton.butterknife'
 
 version = "1.0.0"
 
 android {
-
+    flavorDimensions "default"
+    packageBuildConfig(false)
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES.txt'
         exclude 'META-INF/LICENSE.txt'
@@ -27,22 +27,18 @@ android {
         exclude 'META-INF/dependencies.txt'
         exclude 'META-INF/LGPL2.1'
     }
-
     lintOptions {
         abortOnError false
     }
-
-    compileSdkVersion 26
-    buildToolsVersion "25.0.2"
-
+    compileSdkVersion 27
+    buildToolsVersion '27.0.1'
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName version
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-
     buildTypes {
         debug {
             minifyEnabled false
@@ -50,8 +46,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             debuggable true
             buildConfigField "boolean", "LOG_DEBUG", "true"
-            buildConfigField "String", "HOST", ""
-            buildConfigField "int", "PORT", ""
+            buildConfigField "String", "HOST", "\"127.0.0.1\""
+            buildConfigField "int", "PORT", "80"
         }
 
         release {
@@ -60,49 +56,44 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             debuggable false
             buildConfigField "boolean", "LOG_DEBUG", "false"
-            buildConfigField "String", "HOST", ""
-            buildConfigField "int", "PORT", ""
+            buildConfigField "String", "HOST", "\"127.0.0.1\""
+            buildConfigField "int", "PORT", "80"
         }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    testCompile 'junit:junit:4.12'
-
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.squareup.okhttp3:okhttp:3.4.1'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-scalars:2.3.0'
-    compile('com.squareup.retrofit2:converter-simplexml:2.3.0') {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    api 'com.android.support:appcompat-v7:27.0.1'
+    api 'com.android.support:design:27.0.1'
+    api 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.squareup.okhttp3:okhttp:3.4.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
+    implementation('com.squareup.retrofit2:converter-simplexml:2.3.0') {
         exclude module: 'stax-api'
     }
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-    compile 'com.google.dagger:dagger:2.5'
-    apt 'com.google.dagger:dagger-compiler:2.5'
-    compile 'com.jakewharton:butterknife:8.8.1'
-    apt 'com.jakewharton:butterknife-compiler:8.4.0'
-    compile 'com.squareup.okio:okio:1.10.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'io.reactivex:rxjava:1.1.6'
-    compile 'com.squareup:otto:1.3.8'
-    compile 'com.fasterxml.jackson.core:jackson-core:2.8.9'
-    compile 'com.fasterxml.jackson.core:jackson-annotations:2.8.9'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.9'
-    compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.squareup.retrofit2:converter-jackson:2.3.0'
-    compile 'com.kyleduo.switchbutton:library:1.4.4'
-    compile "com.daimajia.swipelayout:library:1.2.0@aar"
-    compile 'com.daimajia.androidanimations:library:1.1.2@aar'
-    compile 'com.nineoldandroids:library:2.4.0'
-    compile 'com.android.support:multidex:1.0.1'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    implementation 'com.google.dagger:dagger:2.5'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.5'
+    api 'com.jakewharton:butterknife:9.0.0-SNAPSHOT'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-SNAPSHOT'
+    implementation 'com.squareup.okio:okio:1.10.0'
+    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'io.reactivex:rxjava:1.1.6'
+    implementation 'com.squareup:otto:1.3.8'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.8.9'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.8.9'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.8.9'
+    implementation 'com.squareup.retrofit2:converter-jackson:2.3.0'
+    implementation 'com.android.support:multidex:1.0.2'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.kyleduo.switchbutton:library:1.4.4'
+    implementation "com.daimajia.swipelayout:library:1.2.0@aar"
+    implementation 'com.daimajia.androidanimations:library:1.1.2@aar'
+    implementation 'com.nineoldandroids:library:2.4.0'
 }
 
 apply from: 'install.gradle'
