--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@
  * ProjectName: xjl
  * ModuleName: xjl
  * FileName: build.gradle
- * ClassName: build.gradle
- * LastModified: 10/17/17 10:42 AM
+ * ClassName: build
+ * LastModified: 11/30/17 3:52 PM
  */
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
