--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,8 @@
  * ProjectName: xjl
  * ModuleName: app
  * FileName: build.gradle
- * ClassName: build.gradle
- * LastModified: 10/18/17 3:01 PM
+ * ClassName: build
+ * LastModified: 11/30/17 4:34 PM
  */
 
 apply plugin: 'com.android.application'
