--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
   ~ ModuleName: app
   ~ FileName: AndroidManifest.xml
   ~ ClassName: AndroidManifest.xml
-  ~ LastModified: 10/18/17 3:11 PM
+  ~ LastModified: 10/19/17 8:50 AM
   -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="me.xjliao.xjl">
