--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,3 +1,12 @@
+#
+# Copyright (c) 2017 xjliao.me created by xjliao
+# ProjectName: xjl
+# ModuleName: xjl
+# FileName: gradle-wrapper.properties
+# ClassName: gradle-wrapper.properties
+# LastModified: 11/30/17 1:25 PM
+#
+
 #Thu Nov 30 11:47:16 CST 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
