--- a/xjlib/build.gradle
+++ b/xjlib/build.gradle
@@ -3,8 +3,8 @@
  * ProjectName: xjl
  * ModuleName: xjlib
  * FileName: build.gradle
- * ClassName: build.gradle
- * LastModified: 10/17/17 5:09 PM
+ * ClassName: build
+ * LastModified: 11/30/17 4:36 PM
  */
 
 apply plugin: 'com.android.library'
