--- a/xjlib/src/main/AndroidManifest.xml
+++ b/xjlib/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
   ~ ModuleName: xjlib
   ~ FileName: AndroidManifest.xml
   ~ ClassName: AndroidManifest.xml
-  ~ LastModified: 10/11/17 2:36 PM
+  ~ LastModified: 10/19/17 8:50 AM
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
