--- a/settings.gradle
+++ b/settings.gradle
@@ -4,7 +4,7 @@
  * ModuleName: xjl
  * FileName: settings.gradle
  * ClassName: settings
- * LastModified: 10/19/17 8:50 AM
+ * LastModified: 11/30/17 4:39 PM
  */
 
 include ':app', ':xjlib'
