--- a/xjlib/src/main/AndroidManifest.xml
+++ b/xjlib/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
   ~ ModuleName: xjlib
   ~ FileName: AndroidManifest.xml
   ~ ClassName: AndroidManifest.xml
-  ~ LastModified: 10/19/17 8:50 AM
+  ~ LastModified: 11/30/17 4:39 PM
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
