--- a/xjlib/src/main/AndroidManifest.xml
+++ b/xjlib/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
 
     package="me.xjliao.xjlib">
 
-    <application android:allowBackup="true" android:label="@string/app_name"
+    <application
+        android:allowBackup="true"
+        android:label="@string/app_name"
         android:supportsRtl="true">
 
     </application>
