--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         </activity>
         <activity
             android:name=".MainActivity"></activity>
+        <activity android:name="me.xjliao.xjlib.base.BaseXWebActivity"/>
     </application>
 
 </manifest>
