--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,22 +15,27 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        <activity
+            android:name=".view.SplashActivity"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"></activity>
+            android:name=".view.MainActivity"></activity>
         <activity android:name="me.xjliao.xjlib.base.BaseXWebActivity"/>
+        <activity android:name=".view.LoginActivity"></activity>
+        <activity android:name="me.xjliao.xjlib.auth.AuthenticationActivity"/>
+        <activity android:name="me.xjliao.xjlib.auth.AuthSettingsActivity"/>
     </application>
 
 </manifest>
