--- a/xjlib/build.gradle
+++ b/xjlib/build.gradle
@@ -13,6 +13,8 @@ import org.aspectj.tools.ajc.Main
 
 apply plugin: 'com.android.library'
 apply plugin: 'com.jakewharton.butterknife'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 version = "1.0.0"
 
@@ -37,10 +39,12 @@ android {
     compileSdkVersion 27
     buildToolsVersion '27.0.2'
     defaultConfig {
+        vectorDrawables.useSupportLibrary = true
         minSdkVersion 15
         targetSdkVersion 27
         versionCode 1
         versionName version
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -134,7 +138,11 @@ dependencies {
     implementation 'com.daimajia.androidanimations:library:1.1.2@aar'
     implementation 'com.nineoldandroids:library:2.4.0'
     implementation 'org.aspectj:aspectjrt:1.8.9'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 apply from: 'install.gradle'
 apply from: 'bintray.gradle'
+repositories {
+    mavenCentral()
+}
