--- a/xjlib/build.gradle
+++ b/xjlib/build.gradle
@@ -19,6 +19,10 @@ apply plugin: 'kotlin-android-extensions'
 version = "1.0.0"
 
 android {
+    sourceSets {
+        main { java.srcDirs = ['src/main/java', 'src/main/kotlin'] }
+    }
+
     flavorDimensions "default"
     packageBuildConfig(false)
     packagingOptions {
@@ -37,7 +41,7 @@ android {
         abortOnError false
     }
     compileSdkVersion 27
-    buildToolsVersion '27.0.2'
+    buildToolsVersion '27.0.3'
     defaultConfig {
         vectorDrawables.useSupportLibrary = true
         minSdkVersion 15
@@ -138,7 +142,7 @@ dependencies {
     implementation 'com.daimajia.androidanimations:library:1.1.2@aar'
     implementation 'com.nineoldandroids:library:2.4.0'
     implementation 'org.aspectj:aspectjrt:1.8.9'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 
 apply from: 'install.gradle'
