--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-}
-repositories {
-    mavenCentral()
+    implementation 'org.xwalk:xwalk_core_library_canary:17.46.460.1'
 }
