--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:name=".App"
@@ -23,8 +32,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".view.SplashActivity"
-            android:theme="@style/SplashTheme">
+            android:name=".view.XCrossWalkActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -34,8 +42,8 @@
             android:name=".view.MainActivity"></activity>
         <activity android:name="me.xjliao.xjlib.base.BaseXWebActivity"/>
         <activity android:name=".view.LoginActivity"></activity>
-        <activity android:name="me.xjliao.xjlib.auth.AuthenticationActivity"/>
-        <activity android:name="me.xjliao.xjlib.auth.AuthSettingsActivity"/>
+        <activity android:name="me.xjliao.xjlib.auth.AuthenticationActivity"/> <activity android:name="me.xjliao.xjlib.auth.AuthSettingsActivity"/>
+        <!--<activity android:name=".view.XCrossWalkActivity"></activity>-->
     </application>
 
 </manifest>
