--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,8 @@
  */
 
 include ':app', ':xjlib'
+setBinding(new Binding([gradle: this]))                                 // new
+evaluate(new File(                                                      // new
+        settingsDir,                                               // new
+        'flutter_module/.android/include_flutter.groovy'                          // new
+))
