--- a/xjlib/src/main/AndroidManifest.xml
+++ b/xjlib/src/main/AndroidManifest.xml
@@ -1,26 +1,25 @@
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2017 xjliao.me created by xjliao
   ~ ProjectName: xjl
   ~ ModuleName: xjlib
   ~ FileName: AndroidManifest.xml
   ~ ClassName: AndroidManifest.xml
   ~ LastModified: 11/30/17 4:39 PM
-  -->
-
+-->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-
     package="me.xjliao.xjlib">
 
-    <uses-permission
-        android:name="android.permission.USE_FINGERPRINT" />
-    <uses-feature android:name="android.hardware.fingerprint"
-        android:required="true"/>
+    <uses-permission android:name="android.permission.USE_FINGERPRINT" />
+
+    <uses-feature
+        android:name="android.hardware.fingerprint"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
-
+        <activity android:name=".base.XFlutterActivity"></activity>
     </application>
 
 </manifest>
