Optimized flutter x series

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,16 +32,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".view.XCrossWalkActivity">
+            android:name=".view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".view.MainActivity"></activity>
         <activity android:name="me.xjliao.xjlib.base.BaseXWebActivity"/>
         <activity android:name=".view.LoginActivity"></activity>
+        <activity android:name="me.xjliao.xjlib.base.XFlutterActivity" />
         <activity android:name="me.xjliao.xjlib.auth.AuthenticationActivity"/> <activity android:name="me.xjliao.xjlib.auth.AuthSettingsActivity"/>
         <!--<activity android:name=".view.XCrossWalkActivity"></activity>-->
     </application>
