Optimized some build config

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "xjjjjjl",
-  "main": "index.js",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "16.5.0",
     "react-native": "0.57.1",
     "react-native-code-push": "^5.4.2"
