--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -7,7 +7,17 @@
  * LastModified: 11/30/17 4:39 PM
  */
 
+
+project.ext.react = [
+        bundleAssetName: "index.bundle",
+        entryFile: "src/index.js",
+        root: "../../",
+        inputExcludes: ["android/**", "ios/**"]
+]
+
 apply plugin: 'com.android.application'
+
+apply from: 'tinker-support.gradle'
 
 apply from: "../../node_modules/react-native/react.gradle"
 
@@ -17,10 +27,42 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+
 android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    flavorDimensions "default"
+
+    signingConfigs {
+        debug {
+            storeFile file(STORE_FILE)
+            keyAlias KEY_ALIAS
+            keyPassword KEY_PASSWORD
+            storePassword STORE_PASSWORD
+        }
+
+        release {
+            storeFile file(STORE_FILE)
+            keyAlias KEY_ALIAS
+            keyPassword KEY_PASSWORD
+            storePassword STORE_PASSWORD
+        }
+    }
+
+    productFlavors {
+        xjl {
+            applicationId "me.xjliao.xjl"
+            resValue "string", "app_name", "xjl"
+            manifestPlaceholders = [APP_ID           : applicationId
+            ]
+
+            buildConfigField "String", "APP_ID", "\"" + applicationId + "\""
+            versionName vn
+            versionCode vc
+        }
     }
 
     lintOptions {
@@ -54,18 +96,29 @@ android {
             buildConfigField "String", "CODEPUSH_KEY", '""'
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
         }
 
         release {
             buildConfigField "String", "CODEPUSH_KEY", '"' + CODEPUSH_KEY_PRODUCTION + '"'
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
 
         releaseStaging {
             buildConfigField "String", "CODEPUSH_KEY", '"' + CODEPUSH_KEY_STAGING + '"'
             minifyEnabled false
+            signingConfig signingConfigs.release
             matchingFallbacks = ['release']
+        }
+    }
+
+
+    android.applicationVariants.all { variant ->
+        variant.outputs.all {
+            outputFileName = "${variant.productFlavors[0].name}-${variant.buildType.name}" +
+                    "-v${variant.productFlavors[0].versionName}-" + "${buildTimeStamp}.apk"
         }
     }
 }
@@ -78,5 +131,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation  'com.facebook.react:react-native:+'
+    implementation 'com.tencent.bugly:crashreport_upgrade:1.3.4'
+    implementation 'com.tencent.bugly:nativecrashreport:3.3.1'
 
 }
