加入代码混淆

--- a/android/xjlib/build.gradle
+++ b/android/xjlib/build.gradle
@@ -68,8 +68,8 @@ android {
         }
 
         release {
-            minifyEnabled false
-            shrinkResources false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             debuggable false
             buildConfigField "boolean", "LOG_DEBUG", "false"
