Oops, just a little bit wanna coding

--- a/android/xjlib/build.gradle
+++ b/android/xjlib/build.gradle
@@ -68,7 +68,7 @@ android {
         }
 
         release {
-            minifyEnabled true
+            minifyEnabled false
             shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             debuggable false
