--- a/android/build.gradle
+++ b/android/build.gradle
@@ -14,7 +14,6 @@ buildscript {
     repositories {
         google()
         jcenter()
-        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
         maven {
             url 'https://download.01.org/crosswalk/releases/crosswalk-lite/android/maven2/'
         }
@@ -24,7 +23,7 @@ buildscript {
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.1'
         classpath 'com.tencent.bugly:tinker-support:1.1.1'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
-        classpath 'com.jakewharton:butterknife-gradle-plugin:9.0.0-SNAPSHOT'
+        classpath 'com.jakewharton:butterknife-gradle-plugin:8.5.0'
         classpath 'org.aspectj:aspectjtools:1.8.9'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
@@ -39,7 +38,6 @@ allprojects {
         }
         google()
         jcenter()
-        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
         maven {
             url 'https://download.01.org/crosswalk/releases/crosswalk-lite/android/maven2/'
         }
