--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -129,7 +129,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation  'com.facebook.react:react-native:+'
+    implementation  'com.facebook.react:react-native:0.57.1'
     implementation 'com.tencent.bugly:crashreport_upgrade:1.3.4'
     implementation 'com.tencent.bugly:nativecrashreport:3.3.1'
 
