--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -132,5 +132,6 @@ dependencies {
     implementation  'com.facebook.react:react-native:0.57.1'
     implementation 'com.tencent.bugly:crashreport_upgrade:1.3.4'
     implementation 'com.tencent.bugly:nativecrashreport:3.3.1'
-
+    implementation 'com.jakewharton:butterknife:8.5.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.0'
 }
