--- a/android/xjlib/build.gradle
+++ b/android/xjlib/build.gradle
@@ -131,7 +131,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     implementation 'com.google.dagger:dagger:2.5'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.5'
-    api 'com.jakewharton:butterknife:8.5.0'
+    implementation 'com.jakewharton:butterknife:8.5.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.0'
     implementation 'com.squareup.okio:okio:1.10.0'
     implementation 'io.reactivex:rxandroid:1.2.1'
